--- a/styles/global.css
+++ b/styles/global.css
@@ -36,10 +36,11 @@ canvas{
 }
 .scrollable {
   margin-left: 1rem;
-  width: 800px; 
+  width: 300px; 
+  height: 500px;
   overflow-x: auto;
   white-space: nowrap;
-  border: 1px solid #000;
+  border: none;
 }
 .content {
   display: inline-block;
